frontend/test/should_pass/setminmax_exec.grg
#using "set_model_002.gm"

rule r
{
	a:A;
	
	modify {
	---
		exec( {{ set<int>{0,1,2}.min() < a.intSet.max() && a.intSet.min() > set<int>{0,1,2}.max() }} );
		exec( {{ ::x.min() < ::x.max() }} );
	}
}
