frontend/test/should_fail/exectype_InSetmap2.grg
using exectype;

rule r
{
	modify  {
		exec(x:set<int> =set<int> && y:string="fool" && y in x);
	}
}